Container-Root/eks/deployment/traefik/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-whoami
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /notls-whoami
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
