Container-Root/eks/deployment/traefik/example/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-whoami
  namespace: default
spec:
  entryPoints:
    - traefik
  routes:
  - match: Host(`your.example.com`) || PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
